--- a/Class_Attendance_Tracker/static/nav.css
+++ b/Class_Attendance_Tracker/static/nav.css
@@ -21,6 +21,7 @@ body {
     object-fit: contain;
     width: 80px;
     left: 20px;
+    top: 2px;
 }
 
 /* Nav link css */
